creating interface.php

--- a/bank.html
+++ b/bank.html
@@ -44,10 +44,13 @@
                 <input type="number" name="account" id="iaccount"><br>
                 <label for="itype">Tipo da Conta</label>
                 <select name="account-type" id="itype">
-                    <option value="corrente">Correte</option>
+                    <option value="corrente">Corrente</option>
                     <option value="poupanca">Poupança</option>
                     <option value="investimento">Investimento</option>
                 </select>
+                <p>
+                    <input type="submit" name="addBank" class="button" value="Adicionar">
+                </p>
             </fieldset>
         </form>
     </div>
