--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
                 <textarea name="message" id="imessage" cols="30" rows="10"></textarea>
             </fieldset>
             <p>
-                <input type="submit" value="Enviar" class="button">
+                <input type="submit" name="send" value="Enviar" class="button">
             </p>
         </form>
     </div>
