--- a/expense.html
+++ b/expense.html
@@ -30,7 +30,7 @@
                 <input type="number" name="value" id="ivalue" autocomplete="transaction-currency" required>
                 <label for="idate">Data</label>
                 <input type="date" name="date" id="idate" required>
-                <input type="submit" name="add" class="button" value="Adicionar"><br>
+                <input type="submit" name="addExpense" class="button" value="Adicionar"><br>
             </fieldset>
         </form>
         <form action="test.php" method = "get" class="filter">
