--- a/job.html
+++ b/job.html
@@ -22,7 +22,7 @@
                 <input type="number" name="value" id="ivalue">
                 <label for="iwhen">Data da Atualização</label>
                 <input type="date" name="when" id="iwhen" autocomplete="bday" value="2022-08-01" required>
-                <input type="submit" name="update" class="button" value="Atualizar">
+                <input type="submit" name="updateJob" class="button" value="Atualizar">
             </fieldset>
         </form>
         <table>
@@ -125,7 +125,7 @@
                 <input type="date" name="admission" id="iadmission" required>
             </fieldset>
             <p>
-                <input type="submit" name="register" class="button" value="Cadastrar">
+                <input type="submit" name="registerJob" class="button" value="Cadastrar">
             </p>
         </form>
     </div>
